// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`switch-ethereum-chain confirmation should match snapshot 1`] = `
<div>
  <div
    class="confirmation-page"
  >
    <div
      class="confirmation-page__content"
    >
      <div
        class="box box--margin-top-2 box--flex-direction-row box--justify-content-center box--display-flex"
      >
        <div
          class="network-display chip chip--with-left-icon chip--border-color-border-muted chip--background-color-undefined chip--max-content"
          data-testid="network-display"
        >
          <div
            class="chip__left-icon"
          >
            <div
              class="color-indicator color-indicator--filled color-indicator--color-icon-muted color-indicator--size-xs"
              data-testid="color-icon-icon-muted"
            >
              <span
                class="color-indicator__inner-circle"
              />
            </div>
          </div>
          <span
            class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography chip__label typography--h7 typography--weight-normal typography--style-normal typography--color-text-default"
          >
            Test initial state
          </span>
        </div>
      </div>
      <h3
        class="box box--md:margin-2 box--margin-top-1 box--margin-bottom-1 box--sm:padding-4 box--lg:padding-4 box--flex-direction-row typography typography--h3 typography--weight-normal typography--style-normal typography--align-center typography--color-text-default"
      >
        Allow this site to switch the network?
      </h3>
      <h6
        class="box box--margin-top-1 box--margin-bottom-1 box--sm:padding-4 box--lg:padding-4 box--flex-direction-row typography typography--h7 typography--weight-normal typography--style-normal typography--align-center typography--color-text-alternative"
      >
        This will switch the selected network within MetaMask to a previously added network:
      </h6>
      <div
        class="box box--flex-direction-row box--justify-content-center box--display-flex"
      >
        <div
          class="box confirmation-network-switch box--margin-top-8 box--display-flex box--flex-direction-row box--justify-content-center box--height-full"
        >
          <div
            class="box confirmation-network-switch__icon box--display-block box--flex-direction-row"
          >
            <div
              class="confirmation-network-switch__unknown-icon"
            >
              <i
                class="fa fa-question fa-2x"
              />
            </div>
            <h6
              class="box box--margin-top-1 box--margin-bottom-1 box--display-flex box--flex-direction-row box--justify-content-center typography typography--h6 typography--weight-normal typography--style-normal typography--align-center typography--color-text-default"
            >
              Test initial state
            </h6>
          </div>
          <div
            class="box confirmation-network-switch__center-icon box--display-flex box--flex-direction-row box--justify-content-center box--align-items-center"
          >
            <i
              class="fa fa-angle-right fa-lg confirmation-network-switch__check"
            />
            <div
              class="confirmation-network-switch__dashed-line"
            />
          </div>
          <div
            class="box confirmation-network-switch__icon box--display-block box--flex-direction-row"
          >
            <div
              class="confirmation-network-switch__unknown-icon"
            >
              <i
                class="fa fa-question fa-2x"
              />
            </div>
            <h6
              class="box box--margin-top-1 box--margin-bottom-1 box--display-flex box--flex-direction-row box--justify-content-center typography typography--h6 typography--weight-normal typography--style-normal typography--align-center typography--color-text-default"
            >
              Test chain
            </h6>
          </div>
        </div>
      </div>
    </div>
    <div
      class="confirmation-footer"
    >
      <div
        class="confirmation-footer__actions"
      >
        <button
          class="button btn--rounded btn-secondary"
          role="button"
          tabindex="0"
        >
          Cancel
        </button>
        <button
          class="button btn--rounded btn-primary"
          role="button"
          tabindex="0"
        >
          Switch network
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`switch-ethereum-chain confirmation should match snapshot 2`] = `<div />`;

exports[`switch-ethereum-chain confirmation should show alert if there are pending txs 1`] = `
<div>
  <div
    class="confirmation-page"
  >
    <div
      class="confirmation-page__content"
    >
      <div
        class="box box--margin-top-2 box--flex-direction-row box--justify-content-center box--display-flex"
      >
        <div
          class="network-display chip chip--with-left-icon chip--border-color-border-muted chip--background-color-undefined chip--max-content"
          data-testid="network-display"
        >
          <div
            class="chip__left-icon"
          >
            <div
              class="color-indicator color-indicator--filled color-indicator--color-icon-muted color-indicator--size-xs"
              data-testid="color-icon-icon-muted"
            >
              <span
                class="color-indicator__inner-circle"
              />
            </div>
          </div>
          <span
            class="box box--margin-top-1 box--margin-bottom-1 box--flex-direction-row typography chip__label typography--h7 typography--weight-normal typography--style-normal typography--color-text-default"
          >
            Test initial state
          </span>
        </div>
      </div>
      <h3
        class="box box--md:margin-2 box--margin-top-1 box--margin-bottom-1 box--sm:padding-4 box--lg:padding-4 box--flex-direction-row typography typography--h3 typography--weight-normal typography--style-normal typography--align-center typography--color-text-default"
      >
        Allow this site to switch the network?
      </h3>
      <h6
        class="box box--margin-top-1 box--margin-bottom-1 box--sm:padding-4 box--lg:padding-4 box--flex-direction-row typography typography--h7 typography--weight-normal typography--style-normal typography--align-center typography--color-text-alternative"
      >
        This will switch the selected network within MetaMask to a previously added network:
      </h6>
      <div
        class="box box--flex-direction-row box--justify-content-center box--display-flex"
      >
        <div
          class="box confirmation-network-switch box--margin-top-8 box--display-flex box--flex-direction-row box--justify-content-center box--height-full"
        >
          <div
            class="box confirmation-network-switch__icon box--display-block box--flex-direction-row"
          >
            <div
              class="confirmation-network-switch__unknown-icon"
            >
              <i
                class="fa fa-question fa-2x"
              />
            </div>
            <h6
              class="box box--margin-top-1 box--margin-bottom-1 box--display-flex box--flex-direction-row box--justify-content-center typography typography--h6 typography--weight-normal typography--style-normal typography--align-center typography--color-text-default"
            >
              Test initial state
            </h6>
          </div>
          <div
            class="box confirmation-network-switch__center-icon box--display-flex box--flex-direction-row box--justify-content-center box--align-items-center"
          >
            <i
              class="fa fa-angle-right fa-lg confirmation-network-switch__check"
            />
            <div
              class="confirmation-network-switch__dashed-line"
            />
          </div>
          <div
            class="box confirmation-network-switch__icon box--display-block box--flex-direction-row"
          >
            <div
              class="confirmation-network-switch__unknown-icon"
            >
              <i
                class="fa fa-question fa-2x"
              />
            </div>
            <h6
              class="box box--margin-top-1 box--margin-bottom-1 box--display-flex box--flex-direction-row box--justify-content-center typography typography--h6 typography--weight-normal typography--style-normal typography--align-center typography--color-text-default"
            >
              Test chain
            </h6>
          </div>
        </div>
      </div>
    </div>
    <div
      class="confirmation-footer"
    >
      <div
        class="mm-box mm-banner-base mm-banner-alert mm-banner-alert--severity-warning mm-box--padding-3 mm-box--padding-left-2 mm-box--display-flex mm-box--gap-2 mm-box--background-color-warning-muted mm-box--rounded-sm"
      >
        <span
          class="mm-box mm-icon mm-icon--size-lg mm-box--display-inline-block mm-box--color-warning-default"
          style="mask-image: url('./images/icons/danger.svg');"
        />
        <div>
          <span>
            Switching networks will cancel all pending confirmations
          </span>
        </div>
        <button
          aria-label="Close"
          class="mm-box mm-button-icon mm-button-icon--size-sm mm-banner-base__close-button mm-box--margin-left-auto mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-default mm-box--background-color-transparent mm-box--rounded-lg"
        >
          <span
            class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
            style="mask-image: url('./images/icons/close.svg');"
          />
        </button>
      </div>
      <div
        class="confirmation-footer__actions"
      >
        <button
          class="button btn--rounded btn-secondary"
          role="button"
          tabindex="0"
        >
          Cancel
        </button>
        <button
          class="button btn--rounded btn-primary"
          role="button"
          tabindex="0"
        >
          Switch network
        </button>
      </div>
    </div>
  </div>
</div>
`;
